# zipy

./: .gitignore  Cargo.toml  README.md
docs/: TODO.md
sdk/npm/: index.js  package.json
sdk/pip/: pyproject.toml
sdk/pip/zipy/: __init__.py
